# platform.core.multimedia.libmm-camcorder

./: AUTHORS  Makefile.am  configure.ac  libmm-camcorder.manifest  mm-camcorder.pc.in  mm-camcorderclient.pc.in  project.config  symbols
TC/: _export_env.sh  build.sh  execute.sh  tet_scen
TC/utc/: Makefile  tslist  uts_mm_camcorder_cancel.c  uts_mm_camcorder_cancel.h  uts_mm_camcorder_capture_start.c  uts_mm_camcorder_capture_start.h  uts_mm_camcorder_capture_stop.c  uts_mm_camcorder_capture_stop.h  uts_mm_camcorder_commit.c  uts_mm_camcorder_commit.h  uts_mm_camcorder_create.c  uts_mm_camcorder_create.h  uts_mm_camcorder_destroy.c  uts_mm_camcorder_destroy.h  uts_mm_camcorder_get_attr_info.c  uts_mm_camcorder_get_attr_info.h  uts_mm_camcorder_get_attrs.c  uts_mm_camcorder_get_attrs.h  uts_mm_camcorder_get_state.c  uts_mm_camcorder_get_state.h  uts_mm_camcorder_pause.c  uts_mm_camcorder_pause.h  uts_mm_camcorder_realize.c  uts_mm_camcorder_realize.h  uts_mm_camcorder_record.c  uts_mm_camcorder_record.h  uts_mm_camcorder_set_attrs.c  uts_mm_camcorder_set_attrs.h  uts_mm_camcorder_set_message_callback.c  uts_mm_camcorder_set_message_callback.h  uts_mm_camcorder_set_video_capture_callback.c  uts_mm_camcorder_set_video_capture_callback.h  uts_mm_camcorder_set_video_stream_callback.c  uts_mm_camcorder_set_video_stream_callback.h  uts_mm_camcorder_start.c  uts_mm_camcorder_start.h  uts_mm_camcorder_start_focusing.c  uts_mm_camcorder_start_focusing.h  uts_mm_camcorder_stop.c  uts_mm_camcorder_stop.h  (+6 more)
debian/: changelog  control  copyright  libmm-camcorder-dev.install.in  libmm-camcorder.install.in  rules
packaging/: libmm-camcorder.changes  libmm-camcorder.spec
src/: Makefile.am  mm_camcorder.c  mm_camcorder_attribute.c  mm_camcorder_audiorec.c  mm_camcorder_client.c  mm_camcorder_configure.c  mm_camcorder_exifinfo.c  mm_camcorder_gstcommon.c  mm_camcorder_internal.c  mm_camcorder_mused.c  mm_camcorder_platform.c  mm_camcorder_resource.c  mm_camcorder_sound.c  mm_camcorder_stillshot.c  mm_camcorder_util.c  mm_camcorder_videorec.c
src/client/: mm_camcorder_client.c
src/include/: mm_camcorder.h  mm_camcorder_attribute.h  mm_camcorder_audiorec.h  mm_camcorder_client.h  mm_camcorder_configure.h  mm_camcorder_exifdef.h  mm_camcorder_exifinfo.h  mm_camcorder_gstcommon.h  mm_camcorder_internal.h  mm_camcorder_mused.h  mm_camcorder_platform.h  mm_camcorder_resource.h  mm_camcorder_sound.h  mm_camcorder_stillshot.h  mm_camcorder_util.h  mm_camcorder_videorec.h
test/: Makefile.am  mm_camcorder_samplecode.c  mm_camcorder_testsuite.c
